backend/logs/scan_41ae43b0562f.log
[2026-03-16 02:56:33] [INFO    ] [scan.41ae43b0562f] [Recon] Discovering subdomains for pianistprodigy.com...
[2026-03-16 02:56:33] [INFO    ] [scan.41ae43b0562f] [Recon] Starting subdomain discovery for pianistprodigy.com
[2026-03-16 02:56:33] [INFO    ] [scan.41ae43b0562f] [Recon] assetfinder OK (0.7s, 47 bytes)
[2026-03-16 02:56:43] [INFO    ] [scan.41ae43b0562f] [Recon] subfinder OK (10.8s, 52 bytes)
[2026-03-16 02:56:44] [INFO    ] [scan.41ae43b0562f] [Recon] Done: 2 from subfinder, 2 from assetfinder, 3 unique total.
[2026-03-16 02:56:44] [INFO    ] [scan.41ae43b0562f] [Resolver] Resolving 3 hosts...
[2026-03-16 02:56:44] [INFO    ] [scan.41ae43b0562f] [Resolver] Resolving 3 hosts via dnsx
[2026-03-16 02:56:45] [INFO    ] [scan.41ae43b0562f] [Resolver] dnsx OK (0.7s, 3506 bytes)
[2026-03-16 02:56:45] [INFO    ] [scan.41ae43b0562f] [Resolver] Resolved 3 hosts, 3 unique IPs
[2026-03-16 02:56:45] [INFO    ] [scan.41ae43b0562f] [OriginIP] Detecting origin IPs / CDN bypass...
[2026-03-16 02:56:45] [INFO    ] [scan.41ae43b0562f] [OriginIP] Probing origin IP for pianistprodigy.com
[2026-03-16 02:56:53] [INFO    ] [scan.41ae43b0562f] [OriginIP] Found 4 IPs total. CDN: [], Origin: ['172.67.186.80', '104.21.68.37', '172.64.80.1', '128.199.103.31']
[2026-03-16 02:56:53] [INFO    ] [scan.41ae43b0562f] [PortScan] Scanning ports on 3 hosts...
[2026-03-16 02:56:53] [INFO    ] [scan.41ae43b0562f] [PortScan] Scanning 4 hosts
[2026-03-16 02:57:00] [INFO    ] [scan.41ae43b0562f] [PortScan] naabu OK (6.3s, 4437 bytes)
[2026-03-16 02:57:00] [INFO    ] [scan.41ae43b0562f] [PortScan] 20 open ports found across 4 hosts. Ports: [22, 53, 80, 110, 143, 389, 443, 465, 587, 993, 995, 5222, 5269, 7025, 8443]
[2026-03-16 02:57:00] [INFO    ] [scan.41ae43b0562f] [ServiceScan] Detecting services on 20 open ports...
[2026-03-16 02:57:00] [INFO    ] [scan.41ae43b0562f] [ServiceScan] nmap on 4 target(s), 15 ports
[2026-03-16 03:02:23] [INFO    ] [scan.41ae43b0562f] [ServiceScan] nmap OK (323.3s, 29927 bytes)
[2026-03-16 03:02:23] [INFO    ] [scan.41ae43b0562f] [ServiceScan] Found 23 services, 5 OS matches
[2026-03-16 03:02:23] [INFO    ] [scan.41ae43b0562f] [HTTPProbe] Probing HTTP/HTTPS endpoints...
[2026-03-16 03:02:24] [INFO    ] [scan.41ae43b0562f] [HTTPProbe] Probing 81 URLs
[2026-03-16 03:02:24] [WARNING ] [scan.41ae43b0562f] [HTTPProbe] httpx failed: Usage: httpx [OPTIONS] URL

Error: No such option: -l

[2026-03-16 03:02:24] [INFO    ] [scan.41ae43b0562f] [HTTPProbe] 0 live hosts, tech: [], servers: []
[2026-03-16 03:02:24] [INFO    ] [scan.41ae43b0562f] [VulnScan] Running vuln scan on 0 endpoints...
[2026-03-16 03:02:25] [INFO    ] [scan.41ae43b0562f] [VulnScan] Starting Nuclei + Nikto in parallel
[2026-03-16 03:02:25] [INFO    ] [scan.41ae43b0562f] [VulnScan] Primary URL: https://pianistprodigy.com
[2026-03-16 03:02:25] [WARNING ] [scan.41ae43b0562f] [VulnScan] nikto failed: + ERROR: Unable to open '' for write: 
1 at /var/lib/nikto/plugins/nikto_report_text.plugin line 41.

[2026-03-16 03:02:26] [WARNING ] [scan.41ae43b0562f] [VulnScan] nuclei failed: 
[2026-03-16 03:02:26] [INFO    ] [scan.41ae43b0562f] [VulnScan] Nuclei: 0 findings | Nikto: 0 findings
[2026-03-16 03:02:26] [INFO    ] [scan.41ae43b0562f] [TLSScan] Analyzing TLS configuration for pianistprodigy.com...
[2026-03-16 03:02:26] [INFO    ] [scan.41ae43b0562f] [TLSScan] Analyzing TLS on pianistprodigy.com:443
[2026-03-16 03:02:26] [WARNING ] [scan.41ae43b0562f] [TLSScan] testssl.sh failed: [0;35m/usr/local/bin/testssl.sh: unrecognized option "--no-color"[m

[2026-03-16 03:02:26] [INFO    ] [scan.41ae43b0562f] [Aggregation] Aggregating and normalizing all results...
[2026-03-16 03:02:27] [INFO    ] [scan.41ae43b0562f] [AIAnalysis] Running AI-powered security analysis...
[2026-03-16 03:02:27] [INFO    ] [scan.41ae43b0562f] [Report] Generating professional PDF report...
[2026-03-16 03:02:28] [ERROR   ] [scan.41ae43b0562f] Scan failed: BaseDocTemplate.build() got an unexpected keyword argument 'onFirstPage'
Traceback (most recent call last):
  File "/home/ubuntu/pentestbot_2/core/job_manager.py", line 355, in _execute
    pdf_path = pdf_gen.generate(report_data)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/pentestbot_2/report/pdf_generator.py", line 82, in generate
    doc.build(
TypeError: BaseDocTemplate.build() got an unexpected keyword argument 'onFirstPage'

[2026-03-16 03:02:28] [INFO    ] [scan.41ae43b0562f] [Error] Scan failed: BaseDocTemplate.build() got an unexpected keyword argument 'onFirstPage'
